<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="220sp"
        android:text="Hello World!"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        android:src="@drawable/image"
        android:contentDescription="@string/title"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/click_circular">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_size"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_circular_selected">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/flBMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/history"
        android:textSize="22sp"/>

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toEndOf="@+id/flBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_circular_selected">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_calendar"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/flHistory"
        app:layout_constraintStart_toEndOf="@+id/calculator"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>