<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolBarTheme"
        android:background="@color/white"
        app:title="WorkOut App"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/fl_progress"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/fl_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circular"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_bar_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:max="10"
            android:indeterminate="false"
            android:progress="100"
            android:rotation="-90"
            />
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/background"
            >
            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/ten"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tvUpcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/fl_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvUpcomingExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/tvUpcoming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivExercise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/jump"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvExerciseTitle"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"/>

    <TextView
        android:id="@+id/tvExerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/fl_exerciseProgress"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ivExercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/fl_exerciseProgress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circular"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/rvExercise">

        <ProgressBar
            android:id="@+id/progressExerciseBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_bar_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:max="10"
            android:indeterminate="false"
            android:progress="100"
            android:rotation="-90"
            />
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/background"
            >
            <TextView
                android:id="@+id/tvExerciseTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_30"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </LinearLayout>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_exerciseProgress"/>


</androidx.constraintlayout.widget.ConstraintLayout>